# cpp-shop-management

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Address.h  Customer.h  Header.h  Helper.h  Manager.h  Person.h  Product.h  Shop.h  User.h
src/: Address.cpp  Customer.cpp  Helper.cpp  Manager.cpp  Person.cpp  Product.cpp  Shop.cpp  User.cpp
